ROX-5518, ROX-5511: Adding form validation and using form component from ui-components in CIDR Block form  (#6697)
* adding network request logic for rows
* adding promise array
* added form components from ui-components
* adding custom validatin

--- a/ui/package.json
+++ b/ui/package.json
@@ -44,5 +44,8 @@
     "devDependencies": {
         "chalk-cli": "^4.1.0",
         "lerna": "^3.22.1"
+    },
+    "dependencies": {
+        "@types/lodash.get": "^4.4.6"
     }
 }
