--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -45,6 +45,7 @@
         "@tippyjs/react": "^4.1.0",
         "formik": "^2.1.5",
         "initials": "^3.1.0",
+        "lodash.get": "^4.4.2",
         "prop-types": "^15.7.2",
         "react-feather": "^2.0.8",
         "tippy.js": "^6.2.6",
