--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -30,8 +30,6 @@
         "deepmerge": "^3.2.0",
         "events": "^3.2.0",
         "file-saver": "^1.3.8",
-        "fontsource-open-sans": "^3.0.9",
-        "fontsource-open-sans-condensed": "^3.0.9",
         "formik": "^2.1.5",
         "framer-motion": "^2.6.13",
         "graphql": "^15.3.0",
@@ -85,6 +83,8 @@
         "store": "^2.0.12",
         "styled-components": "^5.1.1",
         "tippy.js": "^6.2.6",
+        "typeface-open-sans": "^1.1.13",
+        "typeface-open-sans-condensed": "^1.1.13",
         "use-deep-compare-effect": "^1.3.1",
         "yup": "^0.29.3"
     },
