--- a/image/templates/helm/stackrox-central/templates/01-central-00-serviceaccount.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-00-serviceaccount.yaml
@@ -12,5 +12,5 @@ metadata:
 imagePullSecrets:
 {{- range $secretName := ._rox.imagePullSecrets._names }}
 - name: {{ quote $secretName }}
-{{ end -}}
+{{- end }}
 
