--- a/image/templates/helm/stackrox-central/templates/02-scanner-00-serviceaccount.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-00-serviceaccount.yaml
@@ -14,6 +14,6 @@ metadata:
 imagePullSecrets:
 {{- range $secretName := ._rox.imagePullSecrets._names }}
 - name: {{ quote $secretName }}
-{{ end -}}
+{{- end }}
 
 {{ end -}}
