ROX-5787: Force downgrade in roxctl (#6744)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2807,7 +2807,7 @@ jobs:
               "HTTP/2 proxy with plain backends:15443"
             )
 
-            failures=0
+            failures=()
             for p in "${proxies[@]}"; do
               name="$(echo "$p" | cut -d: -f1)"
               port="$(echo "$p" | cut -d: -f2)"
@@ -2818,6 +2818,7 @@ jobs:
               scheme="https"
               plaintext="false"
               plaintext_neg="true"
+              direct=0
               case "$opt" in
                 plaintext)
                   extra_args=(--insecure)
@@ -2827,6 +2828,7 @@ jobs:
                   ;;
                 direct)
                   extra_args=(--direct-grpc)
+                  direct=1
                   ;;
               esac
 
@@ -2834,27 +2836,38 @@ jobs:
               endpoint="central-proxy.stackrox.local:${port}"
               for endpoint_tgt in "${scheme}://${endpoint}" "${scheme}://${endpoint}/" "$endpoint"; do
                 roxctl "${extra_args[@]}" --plaintext="$plaintext" -e "${endpoint_tgt}" -p "$ROX_PASSWORD" central debug log >/dev/null || \
-                  failures=$((failures + 1))
+                  failures+=("$p")
+
+                if (( direct )); then
+                  roxctl "${extra_args[@]}" --plaintext="$plaintext" --force-http1 -e "${endpoint_tgt}" -p "$ROX_PASSWORD" central debug log &>/dev/null && \
+                    failures+=("${p},force-http1")
+                else
+                  roxctl "${extra_args[@]}" --plaintext="$plaintext" --force-http1 -e "${endpoint_tgt}" -p "$ROX_PASSWORD" central debug log >/dev/null || \
+                    failures+=("${p},force-http1")
+                fi
 
                 if [[ "$endpoint_tgt" = *://* ]]; then
                   # Auto-sense plaintext or TLS when specifying a scheme
                   roxctl "${extra_args[@]}" -e "${endpoint_tgt}" -p "$ROX_PASSWORD" central debug log >/dev/null || \
-                    failures=$((failures + 1))
+                    failures+=("${p},tls-autosense")
 
                   # Incompatible plaintext configuration should fail
                   roxctl "${extra_args[@]}" --plaintext="$plaintext_neg" -e "${endpoint_tgt}" -p "$ROX_PASSWORD" central debug log &>/dev/null && \
-                    failures=$((failures + 1))
+                    failures+=("${p},incompatible-tls")
                 fi
 
               done
               roxctl "${extra_args[@]}" --plaintext="$plaintext" -e "central-proxy.stackrox.local:${port}" -p "$ROX_PASSWORD" sensor generate k8s --name remote --continue-if-exists || \
-                failures=$((failures + 1))
+                failures+=("${p},sensor-generate")
               echo "Done."
               rm -rf "/tmp/proxy-test-${port}"
             done
 
-            echo "Total: ${failures} failures."
-            (( failures == 0 ))
+            echo "Total: ${#failures[@]} failures."
+            if (( ${#failures[@]} > 0 )); then
+              printf " - %s\n" "${failures[@]}"
+              exit 1
+            fi
 
       - *collectK8sLogs
       - get-and-store-debug-dump
