--- a/image/templates/helm/sensorchart/templates/collector-secret.yaml
+++ b/image/templates/helm/sensorchart/templates/collector-secret.yaml
@@ -10,6 +10,7 @@ data:
 {{ .Files.Get "secrets/collector-key.pem" | b64enc | indent 4 }}
 metadata:
   labels:
+    app.kubernetes.io/name: stackrox
     auto-upgrade.stackrox.io/component: sensor
   name: collector-tls
   namespace: stackrox
