--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -60,6 +60,7 @@
         "@storybook/react": "^6.0.21",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^10.4.9",
+        "@types/lodash": "^4.14.162",
         "@types/node": "^14.0.11",
         "@types/react": "^16.9.50",
         "@types/react-dom": "^16.9.8",
