ROX-5834: Change serviceAccount to serviceAccountName (#6790)

--- a/image/templates/helm/stackrox-central/templates/01-central-12-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-12-deployment.yaml
@@ -66,7 +66,7 @@ spec:
                     values:
                     - "true"
             {{- end}}
-      serviceAccount: central
+      serviceAccountName: central
       securityContext:
         fsGroup: 4000
         runAsUser: 4000
