--- a/roxctl/helm/derivelocalvalues/testdata/k8s-resources/loadBalancer.yaml
+++ b/roxctl/helm/derivelocalvalues/testdata/k8s-resources/loadBalancer.yaml
@@ -1473,7 +1473,7 @@ spec:
                     operator: NotIn
                     values:
                     - "true"
-      serviceAccount: central
+      serviceAccountName: central
       securityContext:
         fsGroup: 4000
         runAsUser: 4000
