--- a/roxctl/helm/derivelocalvalues/testdata/k8s-resources/offlineMode-internalRegistry-nodePortExposure-scannerDisabled.yaml
+++ b/roxctl/helm/derivelocalvalues/testdata/k8s-resources/offlineMode-internalRegistry-nodePortExposure-scannerDisabled.yaml
@@ -852,7 +852,7 @@ spec:
                     operator: NotIn
                     values:
                     - "true"
-      serviceAccount: central
+      serviceAccountName: central
       securityContext:
         fsGroup: 4000
         runAsUser: 4000
