--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2922,6 +2922,7 @@ jobs:
       - ROX_AWS_SECURITY_HUB_INTEGRATION: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - checkout
