ROX-5718 syslog notifier (#6778)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2989,6 +2989,7 @@ jobs:
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - run-qa-tests:
@@ -3013,6 +3014,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - checkout
@@ -3042,6 +3044,7 @@ jobs:
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - run-qa-tests:
@@ -3072,6 +3075,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - OUTPUT_FORMAT: helm
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - run-qa-tests:
@@ -3606,6 +3610,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - run-openshift-tests:
@@ -3627,6 +3632,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
+      - ROX_SYSLOG_INTEGRATION: true
 
     steps:
       - run-openshift-tests:
