--- a/ci/splunk/Dockerfile
+++ b/ci/splunk/Dockerfile
@@ -1,3 +1,6 @@
 FROM splunk/splunk:6.6.0
 COPY server.conf /opt/splunk/etc/system/local/server.conf
 COPY inputs.conf /opt/splunk/etc/apps/splunk_httpinput/local/inputs.conf
+
+RUN sudo mkdir -p /opt/splunk/etc/apps/stackrox/default
+COPY syslog_inputs.conf /opt/splunk/etc/apps/stackrox/default/inputs.conf
