[ROX-5731] Pull default external sources for network graph-online mode(#6804)
* Pull default external sources for the network graph

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2646,6 +2646,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_NETWORK_FLOWS_SEARCH_FILTER_UI: true
+      - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
 
     steps:
