Upgrading react-table to version 7 (#6893)
* Replacing react-table with react-table-6

* changes

--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -68,7 +68,8 @@
         "react-select": "^2.0.0",
         "react-slick": "^0.21.0",
         "react-spinners": "^0.9.0",
-        "react-table": "^6.11.5",
+        "react-table": "^7.6.2",
+        "react-table-6": "^6.11.0",
         "react-toastify": "^3.4.3",
         "react-transition-group": "^4.4.1",
         "react-truncate": "^2.4.0",
