ROX-5865: Consume endpoint configuration in Helm chart (#6827)
* X-Smart-Branch-Parent: master

* parse endpoint/port info in helm charts

* test support package generation

--- a/image/templates/helm/stackrox-central/templates/01-central-10-networkpolicy.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-10-networkpolicy.yaml
@@ -11,9 +11,7 @@ metadata:
     {{- include "srox.annotations" (list . "networkpolicy" "allow-ext-to-central") | nindent 4 }}
 spec:
   ingress:
-  - ports:
-    - port: 8443
-      protocol: TCP
+    {{- toYaml ._rox.central._netPolIngressRules | nindent 4 }}
   podSelector:
     matchLabels:
       app: central
