--- a/image/templates/helm/stackrox-central/templates/01-central-13-service.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-13-service.yaml
@@ -11,9 +11,7 @@ metadata:
     {{- include "srox.annotations" (list . "service" "central") | nindent 4 }}
 spec:
   ports:
-  - name: https
-    port: 443
-    targetPort: api
+    {{- toYaml ._rox.central._servicePorts | nindent 4 }}
   selector:
     app: central
   type: ClusterIP
